# Aeroscript

./: .gitignore  LICENSE  README.md  do-docs.bash  do-tests-and-coverage.bash
.github/workflows/: run-unit-test-and-upload-codecov.yml
results/sample_bag/: metadata.yaml
src/docs/: index.html  index.md
src/drone-simulation/: README.md
src/drone-simulation/.devcontainer/: devcontainer.json
src/drone-simulation/src/.devcontainer/: Dockerfile  devcontainer.json
src/drone-simulation/src/mavic_simulation/: CMakeLists.txt  mavic_driver.xml  package.xml  setup.cfg  setup.py
src/drone_controller/: CMakeLists.txt  README.md  compile_commands.json  package.xml
src/drone_controller/config/: letters_AZ_cad.csv
src/drone_controller/docs/html/: README_8md.html  annotated.html  classDroneManager-members.html  classDroneManager.html  classDroneManager__coll__graph.map  classDroneManager__coll__graph.md5  classDroneManager__inherit__graph.map  classDroneManager__inherit__graph.md5  classDroneManager_a39783d5140afe30c4da2f42d4a23e2e9_cgraph.map  classDroneManager_a39783d5140afe30c4da2f42d4a23e2e9_cgraph.md5  classDroneManager_a39783d5140afe30c4da2f42d4a23e2e9_icgraph.map  classDroneManager_a39783d5140afe30c4da2f42d4a23e2e9_icgraph.md5  classDroneManager_a5fdc74af7d72e6683b32123e6e4b28fa_icgraph.map  classDroneManager_a5fdc74af7d72e6683b32123e6e4b28fa_icgraph.md5  classDroneManager_ada7ff21aec20a43f173dedcbb02dfe52_icgraph.map  classDroneManager_ada7ff21aec20a43f173dedcbb02dfe52_icgraph.md5  classDroneManager_aec864cf3cda1b9b61351338ffdbf5a6d_cgraph.map  classDroneManager_aec864cf3cda1b9b61351338ffdbf5a6d_cgraph.md5  classHelperFunctionsTest-members.html  classHelperFunctionsTest.html  classHelperFunctionsTest__coll__graph.map  classHelperFunctionsTest__coll__graph.md5  classHelperFunctionsTest__inherit__graph.map  classHelperFunctionsTest__inherit__graph.md5  classMinimalPublisher-members.html  classMinimalPublisher.html  classMinimalPublisher__coll__graph.map  classMinimalPublisher__coll__graph.md5  classMinimalPublisher__inherit__graph.map  classMinimalPublisher__inherit__graph.md5  classMinimalPublisher_a6019391d2635ca5b3a9b8409151806c3_icgraph.md5  classMinimalPublisher_aa04f84fd8b936705856aa3525ec6f119_cgraph.md5  classMinimalSubscriber-members.html  classMinimalSubscriber.html  classMinimalSubscriber__coll__graph.map  classMinimalSubscriber__coll__graph.md5  classMinimalSubscriber__inherit__graph.map  classMinimalSubscriber__inherit__graph.md5  classMinimalSubscriber_a2b041c84afc47c9a986c2d01629c7116_cgraph.map  classMinimalSubscriber_a2b041c84afc47c9a986c2d01629c7116_cgraph.md5  (+92 more)
src/drone_controller/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  variables_0.js  (+8 more)
src/drone_controller/launch/: integration_test.launch.yaml  run_demo.launch.yaml  subscriber_integration_test.launch.yaml
src/drone_controller/scripts/: generate_coverage_report.bash  run_me_for_fun.bash
src/drone_controller/src/: dji_mavic_controller.cpp  subscriber_member_function.cpp
src/drone_controller/test/: README.md  helper_functions_test.cpp  integration_test.cpp  subscriber_integration_test.cpp  test_utils.hpp
src/drone_orchestrator/: CMakeLists.txt  README.md  compile_commands.json
src/drone_orchestrator/cmake-modules/: CodeCoverage.cmake
src/drone_orchestrator/docs/html/: README_8md.html  annotated.html  classOrchestrator-members.html  classOrchestrator.html  classOrchestratorTest-members.html  classOrchestratorTest.html  classOrchestratorTest__coll__graph.map  classOrchestratorTest__coll__graph.md5  classOrchestratorTest__inherit__graph.map  classOrchestratorTest__inherit__graph.md5  classOrchestrator__coll__graph.map  classOrchestrator__coll__graph.md5  classOrchestrator_a29d10c954d6965106f90ce72b66df0aa_cgraph.map  classOrchestrator_a29d10c954d6965106f90ce72b66df0aa_cgraph.md5  classOrchestrator_a29d10c954d6965106f90ce72b66df0aa_icgraph.map  classOrchestrator_a29d10c954d6965106f90ce72b66df0aa_icgraph.md5  classOrchestrator_a3a06137c96eaac49f760e5d36896b9ce_cgraph.map  classOrchestrator_a3a06137c96eaac49f760e5d36896b9ce_cgraph.md5  classOrchestrator_a3a06137c96eaac49f760e5d36896b9ce_icgraph.map  classOrchestrator_a3a06137c96eaac49f760e5d36896b9ce_icgraph.md5  classOrchestrator_a7427b89017af9b6e35b6f2caf3763033_icgraph.map  classOrchestrator_a7427b89017af9b6e35b6f2caf3763033_icgraph.md5  classOrchestrator_a78bdb25bc8f5e1b2d71cb156ed2aa3fd_cgraph.map  classOrchestrator_a78bdb25bc8f5e1b2d71cb156ed2aa3fd_cgraph.md5  classOrchestrator_a78bdb25bc8f5e1b2d71cb156ed2aa3fd_icgraph.map  classOrchestrator_a78bdb25bc8f5e1b2d71cb156ed2aa3fd_icgraph.md5  classOrchestrator_a842e865cda1767a911331fcd05c46600_icgraph.map  classOrchestrator_a842e865cda1767a911331fcd05c46600_icgraph.md5  classOrchestrator_a8d42bc15122a3ae4003d9b96ad2ae7b2_cgraph.map  classOrchestrator_a8d42bc15122a3ae4003d9b96ad2ae7b2_cgraph.md5  classOrchestrator_a8d42bc15122a3ae4003d9b96ad2ae7b2_icgraph.map  classOrchestrator_a8d42bc15122a3ae4003d9b96ad2ae7b2_icgraph.md5  classOrchestrator_a9b4b36dae5b2e8c9e2ad5092e8d94e4d_icgraph.map  (+65 more)
src/drone_orchestrator/docs/html/search/: all_0.js  (+29 more)
src/drone_orchestrator/include/: orchestrator.hpp
src/drone_orchestrator/src/: my_dummy_lib_funct2.cpp  orchestrator.cpp
src/drone_orchestrator/test/: CMakeLists.txt  README.md  orchestrator_test.cpp  test.cpp
uml/initial/: README.md  activity_diagram.puml  class_diagram.puml  component_diagram.puml  dependency_graph.puml  sequence_diagram.puml
uml/revised/: README.md  activity_diagram.puml  class_diagram.puml  component_diagram.puml  dependency_graph.puml  sequence_diagram.puml
(+7 files in other folders)
